k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: craftonomy-authz-deployment
  labels:
    app: authz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authz-app
  template:
    metadata:
      labels:
        app: authz-app
    spec:
      containers:
        - name: authz-app
          image: ghcr.io/ubunfu/craftonomy-authz:0.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: authz-app-port
