k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authz-app-service
spec:
  type: ClusterIP
  selector:
    app: authz-app
  ports:
    - port: 80
      targetPort: authz-app-port
