k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authz-app-ingress
spec:
  tls:
    - hosts:
        - authz.craftonomy.net
      secretName: secret-tls-authz-app-ingress
  rules:
    - host: authz.craftonomy.net
      http:
        paths:
          - path: /api/v1/oauth2
            pathType: Prefix
            backend:
              service:
                name: authz-app-service
                port:
                  number: 80
